<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#8E8E8E"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textViewManager"
        android:layout_width="211dp"
        android:layout_height="37dp"
        android:background="#9C8DB6"
        android:onClick="managerSelection"
        android:text="@string/manager"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.766"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/textViewResident"
        android:layout_width="211dp"
        android:layout_height="37dp"
        android:background="#9C8DB6"
        android:onClick="residentSelection"
        android:text="@string/resident"
        android:textAlignment="center"
        android:textSize="24sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.462"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/textViewWelcome"
        android:layout_width="350dp"
        android:layout_height="58dp"
        android:background="#AE8288"
        android:text="@string/welcome_to_the_apartment_communication_program"
        android:textAlignment="center"
        android:textColorHighlight="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.126" />

    <TextView
        android:id="@+id/textViewSelect"
        android:layout_width="334dp"
        android:layout_height="38dp"
        android:background="#A68E8E"
        android:text="@string/please_select_your_title"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.261" />

    <TextView
        android:id="@+id/textViewSecurity"
        android:layout_width="209dp"
        android:layout_height="38dp"
        android:background="#9C8DB6"
        android:onClick="securitySelection"
        android:text="@string/security"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.623"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="127dp"
        android:layout_height="31dp"
        android:onClick="openAdminEnterance"
        android:text="Admin Panel"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.933" />

</androidx.constraintlayout.widget.ConstraintLayout>